Fix alignment of section header

--- a/src/styles/components/_table.sass
+++ b/src/styles/components/_table.sass
@@ -54,7 +54,7 @@ table
 
 .table-label
   font-size: 18px
-  margin-top: 10px
+  margin-top: 4px
 
 .section
   border-top: 1px solid #ccc
